fixed navbar spacing

--- a/petal/src/index.css
+++ b/petal/src/index.css
@@ -67,7 +67,7 @@
   color: #151414;
   font-size: 25px;
   width: 95%;
-  height: 100%;
+  height: 145%;
   display: flex;
   align-items: center;
   padding: 0 16px;
@@ -94,6 +94,10 @@
 
 span {
   margin-left: 16px;
+}
+
+.tabs {
+  margin-top: 2em;
 }
 
 /* SCHEDULE PAGE */
